--- a/homePage/home-style.css
+++ b/homePage/home-style.css
@@ -54,3 +54,9 @@ p {
   color: black;
   text-align: justify;
 }
+#footer {
+    position: fixed;
+    height: 100px;
+    bottom: 0;
+    width: 100%;
+}
